don't use sun's base64 encoders
Use of sun.misc.BASE64Decoder considered harmful.  Use Bouncy Castle's
instead, which come from the platform source tree.

Change-Id: I7cc0d489854b9b33ddfc90501d064fa1142d9eee